<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LastFoundPosting"
    tools:showIn="@layout/activity_last_found_posting">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/ImageLFPosting"
            android:contentDescription="@string/uploaded_image"
            android:onClick="imageClicked"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@color/colorGreyLine"
            app:srcCompat="@drawable/ic_add_a_photo_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name_of_your_dog"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditNameLF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="text|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_type_last_found"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditDogTypeLF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Type"
            android:inputType="text|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_seen_location_LF"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditLocationLF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:inputType="text|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_characteristics_LF"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditDescLF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/characteristics_LF"
            android:inputType="text|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_LF"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditPhoneLF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone number"
            android:inputType="phone"/>

    </LinearLayout>

</ScrollView>