<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Home"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:clipToPadding="false">

            <android.support.v7.widget.CardView
                android:id="@+id/adoption_card"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="6dp"
                android:layout_width="140dp"
                android:layout_height="155dp"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:contentDescription="@string/adoption_desc"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/circle_background"
                        app:srcCompat="@drawable/ic_favorite_black_24dp"
                        android:padding="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGreyLine"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/adoption_menu_title" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/buy_sell_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="6dp"
                android:layout_width="140dp"
                android:layout_height="155dp"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/circle_background2"
                        app:srcCompat="@drawable/ic_local_mall_black_24dp"
                        android:padding="10dp"
                        android:contentDescription="@string/buy_sell_desc" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGreyLine"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/buy_sell_menu_title" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:clipToPadding="false">

            <android.support.v7.widget.CardView
                android:id="@+id/breeding_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="6dp"
                android:layout_width="140dp"
                android:layout_height="155dp"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:contentDescription="@string/dog_breeding_desc"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/circle_background3"
                        app:srcCompat="@drawable/ic_compare_arrows_black_24dp"
                        android:padding="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGreyLine"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/dog_breeding_menu_title" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/lost_found_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="6dp"
                android:layout_width="140dp"
                android:layout_height="155dp"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:contentDescription="@string/lost_found_desc"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/circle_background4"
                        app:srcCompat="@drawable/ic_find_replace_black_24dp"
                        android:padding="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGreyLine"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/lost_amp_found" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:clipToPadding="false">
            <android.support.v7.widget.CardView
                android:id="@+id/consultation_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="6dp"
                android:layout_width="140dp"
                android:layout_height="155dp"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:contentDescription="@string/consul_desc"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/circle_background5"
                        app:srcCompat="@drawable/ic_live_help_black_24dp"
                        android:padding="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGreyLine"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/consultation_menu_title" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/doggopedia_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="6dp"
                android:layout_width="140dp"
                android:layout_height="155dp"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:contentDescription="@string/doggopedia_desc"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/circle_background6"
                        app:srcCompat="@drawable/ic_pets_black_24dp"
                        android:padding="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGreyLine"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/doggopedia_menu_title" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:clipToPadding="false">

            <android.support.v7.widget.CardView
                android:id="@+id/location_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="6dp"
                android:layout_width="295dp"
                android:layout_height="155dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:contentDescription="@string/map_desc"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/circle_background7"
                        app:srcCompat="@drawable/ic_map_black_24dp"
                        android:padding="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGreyLine"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/location_info_menu_title" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>