<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SellPosting"
    tools:showIn="@layout/activity_sell_posting">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="25dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/choose_image"
                android:onClick="imageClicked"
                android:id="@+id/ImageSellPosting"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:paddingTop="20dp"
                android:paddingBottom="60dp"
                android:background="@color/colorGreyLine"
                app:srcCompat="@drawable/ic_add_a_photo_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:textAlignment="center"
                android:textStyle="normal"
                android:text="@string/add_your_picture"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name_of_your_dog"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditNameSellPosting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="text|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditPriceSellPosting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Price"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditLocationSellPosting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:inputType="text|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditDescSellPosting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:inputType="text|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone number"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/EditPhoneSellPosting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone number"
            android:inputType="phone"/>

    </LinearLayout>

</ScrollView>